[tool.poetry]
name = "mlds6cluster"
version = "0.1.0"
description = "Imagenes de clustering a partir de un cli"
authors = ["vladimirLabdat <vladimir.fajardo@labdat.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
