[tool.poetry]
name = "mlds6cluster"
version = "0.1.0"
description = "Imagenes de clustering a partir de un cli"
authors = ["vladimirLabdat <vladimir.fajardo@labdat.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
ipython = "^8.11.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
